--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -138,7 +138,7 @@ cuadrados = numeros.map( n => n * n );        // cuadrados = [ 1, 16, 4, 9, 25, 
 filtrados = numeros.filter ( n => n > 2 );     // filtrados = [ 4, 3, 5 ]
 
 // Utilizando reduce para sumar los elementos
-suma = numeros.reduce ( (previo, actual) => previo + actual,  0); 
+suma = numeros.reduce ( (acumulador, item) => acumulador + item,  0); 
 // suma = 18  (0 + 1 + 4 + 2 + 3 + 5 + 2 + 1 ) 
 ```
 
@@ -156,8 +156,8 @@ suma = numeros.reduce ( (previo, actual) => previo + actual,  0);
 > ```javascript
 >    var resultado;
 >    
->    resultado = filtrados.reduce ( (previo, actual) => previo + actual,  10);
->    resultado = filtrados.reduce ( (previo, actual) => previo * actual,  1);
+>    resultado = filtrados.reduce ( (acumulador, item) => acumulador + item,  10);
+>    resultado = filtrados.reduce ( (acumulador, item) => acumulador * item,  1);
 >```
 
  
@@ -172,7 +172,7 @@ Como requisito debemos asegurarmos que el método que aplicamos es adecuado al o
 ```javascript
 // Ejemplo: Calculamos el doble de cada número, luego filtramos los menores de 5 y después los sumamos
 
-resultado = numeros.map ( n => 2 * n ).filter ( n => n < 5 ).reduce ( (previo, actual) => previo + actual, 0);
+resultado = numeros.map ( n => 2 * n ).filter ( n => n < 5 ).reduce ( (acumulador, item) => acumulador + item, 0);
 
 // El resultado es 12
 //
@@ -187,7 +187,7 @@ resultado = numeros.map ( n => 2 * n ).filter ( n => n < 5 ).reduce ( (previo, a
 
 resultado = numeros.map    ( n => 2 * n )
                    .filter ( n => n < 5 )
-                   .reduce ( (previo, actual) => previo + actual, 0);
+                   .reduce ( (acumulador, item) => acumulador + item, 0);
 ```
 
 
@@ -195,7 +195,7 @@ resultado = numeros.map    ( n => 2 * n )
 
 - La operación `numeros.map ( n => 2 * n )` nos devuelve el objeto literal `[2, 8, 4, 6, 10, 4, 2]`.
 - Aplicamos entonces la operación `[2, 8, 4, 6, 10, 4, 2].filter ( n => n < 5 )` y obtenemos el objeto literal `[2, 4, 4, 2]`.
-- Aplicamos después la operación `[2, 4, 4, 2].reduce ( (previo, actual) => previo + actual, 0)` y obtenemos `55`.
+- Aplicamos después la operación `[2, 4, 4, 2].reduce ( (acumulador, item) => acumulador + item, 0)` y obtenemos `55`.
 - Por último el resultado `55` se guarda en la variable `resultado`.
 
 
@@ -205,7 +205,7 @@ Si no hubieses empleado encadenamiento de métodos, el código sería el siguien
 
 var resultado1 = numeros.map ( n => 2 * n );
 var resultado2 = resultado1.filter ( n => n < 5 );
-var resultado3 = resultado2.reduce ( (previo, actual) => previo + actual, 0);
+var resultado3 = resultado2.reduce ( (acumulador, item) => acumulador + item, 0);
 
 // resultado final en resultado3
 ```
@@ -231,7 +231,7 @@ El encadenamiento de métodos es una técnica que podemos utilizar siempre que s
 >var sumaEdadWeb = desarrolladores
 >                 .filter ( x => x.tipo === 'web')
 >                 .map    ( x => x.edad)
->                 .reduce ((previo, actual) => previo + actual, 0);
+>                 .reduce ((acumulador, item) => acumulador + item, 0);
 >```
 
 > ACTIVIDAD PROPUESTA:
