--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -57,3 +57,33 @@ setTimeout ( function (a,b) { alert (a + b); } // función a ejecutar
              , 3                               // segundo argumento de la función
            ) ;  
 ```
+
+# Ejecución asíncrona
+
+Utilizada frecuentemente en operaciones de Entrada/Salida:
+
+- Lectura y escritura de información en disco (**E/S disco**)
+- Lectura y escritura de información en base de datos (**E/S base de datos**)
+- Envío y recepción de información en red (**E/S red**)
+
+Existen 3 formas de ejecutar código de forma asíncrona. 
+
+- Callbacks
+- Promesas
+- async / await
+
+## Callbacks
+
+Es la forma clásica y la más común.
+
+## Promesas
+
+
+## async / await
+
+
+
+
+# Referecias
+
+- https://carlosazaustre.es/manejando-la-asincronia-en-javascript/?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=Carlos%20Azaustre
