--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -58,11 +58,60 @@ setTimeout ( function (a,b) { alert (a + b); } // función a ejecutar
            ) ;  
 ```
 
+
+# Parámetros y argumentos
+
+Javascript es un lenguaje que realiza comprobaciones menos estrictas que otros lenguajes. Esto puede a veces provocar errores en programadores que no conocen bien el lenguaje.
+
+**Los parámetros no exigen un tipo a los argumentos**
+Es posible llamar a la función *suma* con argumentos de tipo string u cualquier otro tipo.
+
+```javascript
+suma ('Hola ', 'mundo');    //  Devuelve 'Hola mundo'
+```
+
+**El número de argumentos puede ser menor que el número de parámetros declarados**
+Los argumentos ausentes adquieren valor *undefined*.
+
+```javascript
+suma ('Hola ');             // Devuelve 'Hola undefined'
+suma (2);                   // Devuelve NaN
+```
+
+**El número de argumentos puede ser mayor que el número de parámetros declarados**
+Es posible acceder a todos los argumentos, incluidos los excedentes, a través de la variable local **arguments** disponible para cada función;
+
+```javascript
+suma ('Esto ', 'es ', 'una ', 'prueba.');    // Devuelve 'Esto es'
+```
+Pero si redefinimos la función como
+
+```javascript
+function suma (a, b) { 
+  let s = 0;
+  for (let i = 0; i < arguments.length; i++) {
+    s = s + arguments[i];
+  }
+  return s; 
+}  
+```
+
+El resultado sería
+
+```javascript
+suma (2, 3, 4, 5, 6);                      // Devuelve 20 
+suma ('Esto ', 'es ', 'una ', 'prueba.');  // Devuelve '0Esto es una prueba.'
+```
+
+
+
+
+
 # Ejecución asíncrona
 
 Utilizada frecuentemente en operaciones de Entrada/Salida:
 
-- Lectura y escritura de información en disco (**E/S disco**)
+- Lectura y escritura de información en archivos (**E/S archivos**)
 - Lectura y escritura de información en base de datos (**E/S base de datos**)
 - Envío y recepción de información en red (**E/S red**)
 
