--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -103,6 +103,7 @@ suma (2, 3, 4, 5, 6);                      // Devuelve 20
 suma ('Esto ', 'es ', 'una ', 'prueba.');  // Devuelve '0Esto es una prueba.'
 ```
 
+> NOTA: La variable **arguments** no es un array aunque se comporte como tal, es decir no podemos aplicarle los métodos disponibles a arrays como *sort*, *map*, ...
 
 
 
