--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -1,10 +1,30 @@
 ## Arrays
 
 ```javascript
-var numeros = []; 
+// Declaración de array vacío
+var numeros = [];          
 
-numeros.lenght;                       // 0
+ // Declaración de array con 4 elementos
+var palabras = ['Esto', 'es', 'una', 'prueba'];
 ```
+
+### Propiedades y métodos básicos
+
+```javascript
+// Propiedades
+numeros.lenght;             //  0 
+palabras.length;            //  4 
+
+// Métodos
+palabras.toString();        // "Esto,es,una,prueba"
+
+palabras.concat([1,2,3]);   // ["Esto", "es", "una", "prueba", 1, 2, 3]
+
+palabras.forEach ( function (elemento)  {
+  console.log (elemento); 
+});
+```
+
 
 ### Añadir elementos
 
