--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -117,6 +117,12 @@ c.toString();                      // "50", es string
 >    parseInt (b, 2);  
 >    parseInt (b, 3);
 >    parseInt (b, 10);
+>
+>    var c = 10;
+>    var d = 255;
+>
+>    c.toString(2);
+>    d.toString(16);
 >```
 
 ## Operadores
