--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -12,7 +12,7 @@ var palabras = ['Esto', 'es', 'una', 'prueba'];
 
 ```javascript
 // Propiedades
-numeros.lenght;             //  0 
+numeros.length;             //  0 
 palabras.length;            //  4 
 
 // Métodos
