--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -99,6 +99,7 @@ function suma (a, b) {
 El resultado sería
 
 ```javascript
+// Funciona para cualquier número de argumentos
 suma (2, 3, 4, 5, 6);                      // Devuelve 20 
 suma ('Esto ', 'es ', 'una ', 'prueba.');  // Devuelve '0Esto es una prueba.'
 ```
