--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -111,6 +111,7 @@ Los principales objetos predefinidos son:
 - navigator
 - window
 - document
+- console
 
 ```javascript
 navigator.geolocation
@@ -121,7 +122,7 @@ navigator.geolocation
 ```javascript
 // Igual al anterior, guardado en una función y comprobando previamente el soporte del navegador
 function getLocation() {
-    if (navigator.geolocation) 
+    if (navigator.geolocation)  // o tambien: if ("geolocation" in navigator)
       return navigator.geolocation.getCurrentPosition( 
                 position => { console.log ( position.coords.latitude + ', ' + position.coords.longitude ) }  
                 );
