--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -106,12 +106,49 @@ var p = Object.assign({}, persona);  // shallow copy (copia superficial)
 
 ## Objetos predefinidos
 
-Los principales objetos predefinidos son:
+### Objeto window
 
-- navigator
-- window
+Cuando trabajamos con el navegador web, el principal objeto es **window**, el cual posee innumerables propiedades y métodos.
+
+Tres **métodos interesantes** son los que nos proporcionan cajas de diálogo:
+
+- alert
+- confirm
+- prompt
+
+```javascript
+window.alert   ('Mensaje de bienvenida');
+window.confirm ('¿De verdad deseas hacer eso?');
+window.prompt  ('Escribe tu nombre y apellidos: ');
+```
+
+La cajas de diálogo `confirm` y `prompt` devuelven un valor. Por tanto, suele recogerse dicho valor y evaluarlo o tratarlo de alguna forma. Ejemplos:
+
+```javascript
+if ( window.confirm ('¿De verdad deseas hacer eso?') )
+  window.console.log ('Bien, tú lo has querido');
+  
+console.log ('Has dicho que te llamas ', window.prompt ('Escribe tu nombre y apellidos: '));
+```
+
+
+Tres **propiedades interesantes** (que a su vez son objetos) son:
+
+- navigator  
 - document
 - console
+
+
+> NOTA: **Todos estas propiedades y métodos pueden escribirse sin el prefijo window**. 
+> 
+> Por ejemplo, suele escribirse **`alert ('Hola')`**  en lugar de  `window.alert ('Hola')`
+> y **`document`** en lugar de  `window.document`
+
+
+
+### Objeto navigator
+
+Nos permite acceder a las propiedades y métodos del navegador web.
 
 ```javascript
 navigator.geolocation
@@ -130,4 +167,34 @@ function getLocation() {
       return "Geolocation is not supported by this browser.";
 }
 ```
+
+
+### Objeto document
+
+A través de este objeto accedemos al **DOM (Document Object Model)**, el cual es un modelo del documento actual. De esta manera podemos acceder a cualquier elemento del documento y modificar su contenido.
+
+Métodos interesantes son:
+
+- createElement
+- remove
+- getElementById
+- getElementByClassName
+- getAttribute
+- setAttribute
+- textContent
+
+
+
+### Objeto console
+
+Se utiliza para mostrar mensajes por consola.
+
+```javascript
+console.log   ('Mensaje de log');
+console.info  ('Mensaje de información');
+console.error ('Mensaje de error');
+console.debug ('Mensaje de depuración');
+```
+
+> NOTA: **En NodeJS, el objeto console existe por si mismo**, es decir, en NodeJS no podemos escribir window.console.
 
