--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -142,6 +142,7 @@ Tres **propiedades interesantes** (que a su vez son objetos) son:
 > NOTA: **Todos estas propiedades y métodos pueden escribirse sin el prefijo window**. 
 > 
 > Por ejemplo, suele escribirse **`alert ('Hola')`**  en lugar de  `window.alert ('Hola')`
+>
 > y **`document`** en lugar de  `window.document`
 
 
@@ -152,7 +153,9 @@ Nos permite acceder a las propiedades y métodos del navegador web.
 
 ```javascript
 navigator.geolocation
-         .getCurrentPosition( position => { console.log ( position.coords.latitude + ', ' + position.coords.longitude ) } );
+         .getCurrentPosition( position => { 
+                  console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
+          });
 ```
 
 
@@ -160,9 +163,9 @@ navigator.geolocation
 // Igual al anterior, guardado en una función y comprobando previamente el soporte del navegador
 function getLocation() {
     if (navigator.geolocation)  // o tambien: if ("geolocation" in navigator)
-      return navigator.geolocation.getCurrentPosition( 
-                position => { console.log ( position.coords.latitude + ', ' + position.coords.longitude ) }  
-                );
+      return navigator.geolocation.getCurrentPosition( position => { 
+                                      console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
+                                   });
     else
       return "Geolocation is not supported by this browser.";
 }
@@ -192,6 +195,7 @@ Se utiliza para mostrar mensajes por consola.
 ```javascript
 console.log   ('Mensaje de log');
 console.info  ('Mensaje de información');
+console.warn  ('Mensaje de aviso');
 console.error ('Mensaje de error');
 console.debug ('Mensaje de depuración');
 ```
