--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -138,6 +138,14 @@ Tres **propiedades interesantes** (que a su vez son objetos) son:
 - document
 - console
 
+Estos objetos los vemos en los siguientes apartados. Tiene a su vez sus propias propiedades y métodos. Ejemplo de propiedades para estos objetos son:
+
+```javascript
+window.navigator.AppVersion
+window.document.title
+window.console.memory
+```
+
 
 > NOTA: **Todos estas propiedades y métodos pueden escribirse sin el prefijo window**. 
 > 
