--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -141,9 +141,8 @@ Tres **propiedades interesantes** (que a su vez son objetos) son:
 Estos objetos los vemos en los siguientes apartados. Tiene a su vez sus propias propiedades y métodos. Ejemplo de propiedades para estos objetos son:
 
 ```javascript
-window.navigator.AppVersion
+window.navigator.appVersion
 window.document.title
-window.console.memory
 ```
 
 
@@ -170,7 +169,7 @@ navigator.geolocation
 ```javascript
 // Igual al anterior, guardado en una función y comprobando previamente el soporte del navegador
 function getLocation() {
-    if (navigator.geolocation)  // o tambien: if ("geolocation" in navigator)
+    if (navigator.geolocation)  
       return navigator.geolocation.getCurrentPosition( position => { 
                                       console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
                                    });
