--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -187,11 +187,13 @@ Métodos interesantes son:
 
 - createElement
 - remove
+- appendChild
 - getElementById
 - getElementByClassName
 - getAttribute
 - setAttribute
 - textContent
+- innerHTML
 
 
 
