--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -128,7 +128,7 @@ La cajas de diálogo `confirm` y `prompt` devuelven un valor. Por tanto, suele r
 if ( window.confirm ('¿De verdad deseas hacer eso?') )
   window.console.log ('Bien, tú lo has querido');
   
-console.log ('Has dicho que te llamas ', window.prompt ('Escribe tu nombre y apellidos: '));
+window.console.log ('Has dicho que te llamas ', window.prompt ('Escribe tu nombre y apellidos: '));
 ```
 
 
@@ -161,7 +161,7 @@ Nos permite acceder a las propiedades y métodos del navegador web.
 ```javascript
 navigator.geolocation
          .getCurrentPosition( position => { 
-                  console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
+             console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
           });
 ```
 
@@ -170,9 +170,10 @@ navigator.geolocation
 // Igual al anterior, guardado en una función y comprobando previamente el soporte del navegador
 function getLocation() {
     if (navigator.geolocation)  
-      return navigator.geolocation.getCurrentPosition( position => { 
-                                      console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
-                                   });
+      return navigator.geolocation
+                      .getCurrentPosition( position => { 
+                          console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
+                       });
     else
       return "Geolocation is not supported by this browser.";
 }
