--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -112,9 +112,9 @@ Cuando trabajamos con el navegador web, el principal objeto es **window**, el cu
 
 Tres **métodos interesantes** son los que nos proporcionan cajas de diálogo:
 
-- alert
-- confirm
-- prompt
+- **alert**
+- **confirm**
+- **prompt**
 
 ```javascript
 window.alert   ('Mensaje de bienvenida');
@@ -134,9 +134,9 @@ window.console.log ('Has dicho que te llamas ', window.prompt ('Escribe tu nombr
 
 Tres **propiedades interesantes** (que a su vez son objetos) son:
 
-- navigator  
-- document
-- console
+- **navigator**  
+- **document**
+- **console**
 
 Estos objetos los vemos en los siguientes apartados. Tiene a su vez sus propias propiedades y métodos. Ejemplo de propiedades para estos objetos son:
 
@@ -203,6 +203,7 @@ Métodos interesantes son:
 Se utiliza para mostrar mensajes por consola.
 
 ```javascript
+console.clear ();
 console.log   ('Mensaje de log');
 console.info  ('Mensaje de información');
 console.warn  ('Mensaje de aviso');
