--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -194,6 +194,27 @@ for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
 
+# Declaración de variables
+
+A partir de ES6 se recomienda utilizar las palabra clave **`let`** en lugar de `var` para la declaración de variables. La razón es que `let` declara la variable en un ámbito de bloque al igual que la mayoría de los lenguajes de programación, lo cual es menos propenso a errores en el momento de la ejecución del código. Por contra, las variables declaradas con `var` siguen existiendo fuera del bloque en el cual fueron declaradas, estando únicamente limitadas en su visibilidad por la función en la que fueron declaradas.
+
+
+
+Ejemplo:
+
+```javascript
+for( var i = 0; i < 2; i++ ) {
+    console.log( i );   // 0, 1
+}
+console.info( i ); // 2. La variable i sigue existiendo.  
+
+
+for ( let j = 0; j < 2; j++ ) {
+    console.log( j );   // 0, 1
+}
+console.log( j ); // ReferenceError: j is not defined
+```
+
 # Referencias
 
 - [[en inglés] Objetos](https://www.w3schools.com/js/js_objects.asp)
