--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -197,6 +197,39 @@ Métodos interesantes son:
 - innerHTML
 
 
+**Ejemplo**
+
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Documento</title>
+</head>
+<body>
+ <ul id="lista">
+ </ul>
+</body>
+</html>
+```
+
+
+```javascript
+var list = document.getElementById('list');
+
+for (let i = 1; i <= 5; i++) {
+  let item = document.createElement('li');
+  item.appendChild(document.createTextNode('Item ' + i));
+
+  item.onclick = function(ev) {
+    console.log('Item ' + i + ' is clicked.');
+  };
+  list.appendChild(item);
+}
+```
+
 
 ### Objeto console
 
