--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -169,7 +169,7 @@ navigator.geolocation
 ```javascript
 // Igual al anterior, guardado en una función y comprobando previamente el soporte del navegador
 function getLocation() {
-    if (navigator.geolocation)  
+    if (navigator.geolocation)  // if ("geolocation" in navigator) 
       return navigator.geolocation
                       .getCurrentPosition( position => { 
                           console.log ( position.coords.latitude + ', ' + position.coords.longitude ) 
@@ -217,14 +217,14 @@ Métodos interesantes son:
 
 
 ```javascript
-var list = document.getElementById('list');
+var list = document.getElementById('lista');
 
 for (let i = 1; i <= 5; i++) {
   let item = document.createElement('li');
   item.appendChild(document.createTextNode('Item ' + i));
 
   item.onclick = function(ev) {
-    console.log('Item ' + i + ' is clicked.');
+    console.log('Item ' + i + ' ha sido pulsado.');
   };
   list.appendChild(item);
 }
