--- a/06.PLUS.md
+++ b/06.PLUS.md
@@ -1,1 +1,91 @@
 
+# Características avanzadas
+
+## AJAX (Asynchronous JavaScript And XML)
+
+Para realizar peticiones asíncronas y obtener datos desde un servidor podemos hacer uso de 3 técnicas:
+
+- **XMLHttpRequest**
+- **XMLHttpRequest 2**
+- **fetch**
+
+
+### XMLHttpRequest
+
+Cuando apareció por primera vez la clase XMLHttpRequest, ésta estaba orientada a la petición de datos en formato XML, JSON o HTML.
+
+**Ejemplo**
+
+```javascript
+var xhr = new XMLHttpRequest();
+xhr.onreadystatechange = function() {
+  if (this.readyState == 4 && this.status == 200) {
+    console.log ( this.responseText );
+  }
+};
+xhr.open("GET", "https://api.github.com/users/jamj2000/followers", true);
+xhr.send(); 
+```
+
+
+### XMLHttpRequest 2
+
+Con la versión 2 además se pueden hacer petición de datos binarios (**blob** - Binary Large OBjects). Además con esta versión se simplifica la forma de uso.
+
+**Ejemplo de petición de archivo binario**
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+</head>
+<body>
+ <ul id="lista"></ul>
+  <progress id="progreso" value="0"></progress>
+</body>
+</html>
+```
+
+
+```javascript
+// XHR 2
+var xhr = new XMLHttpRequest();
+xhr.open('GET', 'https://mainline.i3s.unice.fr/mooc/LaSueur.mp3', true);
+xhr.responseType = 'blob';  // Para datos binarios
+
+xhr.onload = function(e) {
+  if (this.status == 200) {
+    // Nota: .response en lugar de .responseText
+    var blob = new Blob([this.response], {type: 'audio/mp3'});
+    
+  }
+};
+
+xhr.onprogress = function(e) {
+   let progreso = document.getElementById('progreso');
+   progreso.value = e.loaded;
+   progreso.max = e.total;
+}
+
+xhr.send();
+```
+
+### fetch
+
+El método **fetch** nos proporciona una forma más moderna de hacer peticiones asíncronas, en la cual trabajamos con promesas (Promises).
+
+**Ejemplo**
+
+```javascript
+fetch ('https://api.github.com/users/jamj2000/following')
+  .then( response => response.json() )
+  .then( jsonData => console.log(jsonData));
+ ``` 
+ 
+
+## Referencias
+
+- [XMLHttpRequest 2](https://www.html5rocks.com/en/tutorials/file/xhr2/)
