--- a/06.PLUS.md
+++ b/06.PLUS.md
@@ -9,6 +9,19 @@ Para realizar peticiones asíncronas y obtener datos desde un servidor podemos h
 - **XMLHttpRequest 2**
 - **fetch**
 
+> NOTA: La mayoría de los sitios tienen deshabilitada la cabecera **CORS** (Cross-Origin Resource Sharing - Uso compartido de recursos entre orígenes)
+>
+>Podemos ver si un sitio tiene activada dicha carácterística con el comando siguiente de bash. En el caso de http://api.github.com sí comparte recursos hacia otros orígenes.
+>```bash
+>curl -I https://api.github.com 2>&1  | grep Access-Control-Allow-Origin
+>```
+>Si nos aparece la siguiente línea, entonces es que el sitio permite **CORS**
+>
+>```
+>Access-Control-Allow-Origin: *
+>```
+
+Un agente crea una petición HTTP de origen cruzado cuando solicita un recurso desde un dominio distinto, un protocolo o un puerto diferente al del documento que lo generó.
 
 ### XMLHttpRequest
 
@@ -89,3 +102,4 @@ fetch ('https://api.github.com/users/jamj2000/following')
 ## Referencias
 
 - [XMLHttpRequest 2](https://www.html5rocks.com/en/tutorials/file/xhr2/)
+- [CORS](https://developer.mozilla.org/es/docs/Web/HTTP/Access_control_CORS)
