--- a/06.PLUS.md
+++ b/06.PLUS.md
@@ -9,9 +9,11 @@ Para realizar peticiones asíncronas y obtener datos desde un servidor podemos h
 - **XMLHttpRequest 2**
 - **fetch**
 
-> NOTA: La mayoría de los sitios tienen deshabilitada la cabecera **CORS** (Cross-Origin Resource Sharing - Uso compartido de recursos entre orígenes)
+Un agente crea una petición HTTP de origen cruzado cuando solicita un recurso desde un dominio distinto, un protocolo o un puerto diferente al del documento que lo generó. Ciertas peticiones de origen cruzado, más notablemente peticiones Ajax, están prohibidas por defecto por la política de seguridad del mismo origen (same-origin security policy, en inglés).
+
+> NOTA: La mayoría de los servidores no indican nada respecto a **CORS** (Cross-Origin Resource Sharing - Uso compartido de recursos de origen cruzado)
 >
->Podemos ver si un sitio tiene activada dicha carácterística con el comando siguiente de bash. En el caso de http://api.github.com sí comparte recursos hacia otros orígenes.
+> Podemos ver si un servidor tiene activada dicha característica con el comando siguiente de bash. 
 >```bash
 >curl -I https://api.github.com 2>&1  | grep Access-Control-Allow-Origin
 >```
@@ -20,8 +22,9 @@ Para realizar peticiones asíncronas y obtener datos desde un servidor podemos h
 >```
 >Access-Control-Allow-Origin: *
 >```
+>En el caso de http://api.github.com sí comparte recursos hacia otros orígenes.
 
-Un agente crea una petición HTTP de origen cruzado cuando solicita un recurso desde un dominio distinto, un protocolo o un puerto diferente al del documento que lo generó.
+
 
 ### XMLHttpRequest
 
