--- a/06.PLUS.md
+++ b/06.PLUS.md
@@ -50,33 +50,30 @@ Con la versión 2 además se pueden hacer petición de datos binarios (**blob** 
 
 **Ejemplo de petición de archivo binario**
 
+
 ```html
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>XHR2 - Datos binarios y barra de progreso</title>
 </head>
 <body>
- <ul id="lista"></ul>
+  
+  <ul id="lista"></ul>
+
   <progress id="progreso" value="0"></progress>
-</body>
-</html>
-```
 
-
-```javascript
-// XHR 2
+  <script>
 var xhr = new XMLHttpRequest();
 xhr.open('GET', 'https://mainline.i3s.unice.fr/mooc/LaSueur.mp3', true);
-xhr.responseType = 'blob';  // Para datos binarios
+xhr.responseType = 'blob';
 
 xhr.onload = function(e) {
   if (this.status == 200) {
-    // Nota: .response en lugar de .responseText
+    // Note: .response instead of .responseText
     var blob = new Blob([this.response], {type: 'audio/mp3'});
-    
   }
 };
 
@@ -87,7 +84,12 @@ xhr.onprogress = function(e) {
 }
 
 xhr.send();
+  </script>
+
+</body>
+</html>
 ```
+
 
 ### fetch
 
