--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -143,6 +143,8 @@ Tres métodos muy interesantes para trabajar con arrays, y para objetos también
 - `filter` : Filtra los elementos deseados
 - `reduce` : Reduce los elementos a un valor
 
+> NOTA: Ninguna de las funciones anteriores modifica el array.
+
 ```javascript
 // Ejemplos
 
