Actualización de contenido

--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -143,7 +143,7 @@ Tres métodos muy interesantes para trabajar con arrays, y para objetos también
 - `filter` : Filtra los elementos deseados
 - `reduce` : Reduce los elementos a un valor
 
-> NOTA: Ninguna de las funciones anteriores modifica el array.
+> NOTA: Ninguno de estos métodos modifica el array.
 
 ```javascript
 // Ejemplos
@@ -154,10 +154,10 @@ var filtrados = [];
 var suma = [];
 
 // Utilizando map para calcular el cuadrado de cada elemento
-cuadrados = numeros.map( n => n * n );        // cuadrados = [ 1, 16, 4, 9, 25, 4, 1 ]  
+cuadrados = numeros.map( item => item * item );        // cuadrados = [ 1, 16, 4, 9, 25, 4, 1 ]  
 
 // Utilizando filter para filtrar los elementos mayores que 2
-filtrados = numeros.filter ( n => n > 2 );     // filtrados = [ 4, 3, 5 ]
+filtrados = numeros.filter ( item => item > 2 );     // filtrados = [ 4, 3, 5 ]
 
 // Utilizando reduce para sumar los elementos
 suma = numeros.reduce ( (acumulador, item) => acumulador + item,  0); 
@@ -194,7 +194,7 @@ Como requisito debemos asegurarmos que el método que aplicamos es adecuado al o
 ```javascript
 // Ejemplo: Calculamos el doble de cada número, luego filtramos los menores de 5 y después los sumamos
 
-resultado = numeros.map ( n => 2 * n ).filter ( n => n < 5 ).reduce ( (acumulador, item) => acumulador + item, 0);
+resultado = numeros.map ( item => 2 * item ).filter ( item => item < 5 ).reduce ( (acumulador, item) => acumulador + item, 0);
 
 // El resultado es 12
 //
@@ -207,16 +207,16 @@ resultado = numeros.map ( n => 2 * n ).filter ( n => n < 5 ).reduce ( (acumulado
 // Mismo ejemplo anterior. Para mayor legibilidad suele indicarse cada método en una línea separada
 // y normalmente el punto (.) suele iniciar la línea.
 
-resultado = numeros.map    ( n => 2 * n )
-                   .filter ( n => n < 5 )
+resultado = numeros.map    ( item => 2 * item )
+                   .filter ( item => item < 5 )
                    .reduce ( (acumulador, item) => acumulador + item, 0);
 ```
 
 
 **Explicación**:
 
-- La operación `numeros.map ( n => 2 * n )` nos devuelve el objeto literal `[2, 8, 4, 6, 10, 4, 2]`.
-- Aplicamos entonces la operación `[2, 8, 4, 6, 10, 4, 2].filter ( n => n < 5 )` y obtenemos el objeto literal `[2, 4, 4, 2]`.
+- La operación `numeros.map ( item => 2 * item )` nos devuelve el objeto literal `[2, 8, 4, 6, 10, 4, 2]`.
+- Aplicamos entonces la operación `[2, 8, 4, 6, 10, 4, 2].filter ( item => item < 5 )` y obtenemos el objeto literal `[2, 4, 4, 2]`.
 - Aplicamos después la operación `[2, 4, 4, 2].reduce ( (acumulador, item) => acumulador + item, 0)` y obtenemos `12`.
 - Por último el resultado `12` se guarda en la variable `resultado`.
 
@@ -225,8 +225,8 @@ Si no hubieses empleado encadenamiento de métodos, el código sería el siguien
 
 ```javascript
 
-var resultado1 = numeros.map ( n => 2 * n );
-var resultado2 = resultado1.filter ( n => n < 5 );
+var resultado1 = numeros.map ( item => 2 * item );
+var resultado2 = resultado1.filter ( item => item < 5 );
 var resultado3 = resultado2.reduce ( (acumulador, item) => acumulador + item, 0);
 
 // resultado final en resultado3
