--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -51,10 +51,16 @@ suma (2, 3);                                   // ahora sí puedo invocar la fun
 ## En un callback
 
 ```javascript
-setTimeout ( function (a,b) { alert (a + b); } // función a ejecutar
-             , 3000                            // milisegundos a esperar antes de ejecutar la función
-             , 2                               // primer argumento de la función  
-             , 3                               // segundo argumento de la función
+setTimeout ( /* función a ejecutar */,  /* milisegundos de espera */);
+
+setTimeout ( function () { alert ('Hola') },  3000 );  
+
+function suma (a, b) {  alert ( a + b); }
+
+setTimeout ( suma    // función a ejecutar
+             , 3000  // milisegundos a esperar antes de ejecutar la función
+             , 2     // primer argumento de la función  
+             , 3     // segundo argumento de la función
            ) ;  
 ```
 
@@ -129,6 +135,7 @@ Es la forma clásica y la más común.
 
 ## Promesas
 
+Disponible a partir de ES6 (2015).
 
 ## async / await
 
