--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -77,16 +77,80 @@ let f4 = new Date("2017-01-01T23:30:00Z");        // Hora de Londres y Canarias,
 ```
 
 
-## RegExp
+## RegExp (Expresiones Regulares)
+
+Las expresiones regulares es un asunto de cierta complejidad. En las referencias tienes un desarrollo detallado. Una expresión regular no es más que un patrón de texto.
+
+Las expresiones regulares tienen multiples utilidades. Una de las más frecuentes es la **validación de datos** respecto a un patrón determinado.
+
+Los siguientes carácteres tienen un significado especial:
+
+```
+^    Indica el principio de una cadena
+$    Indica el final de una cadena
+()   Un agrupamiento de parte de una expresión
+[]   Un conjunto de caracteres de la expresión
+{}   Indica un número o intervalo de longitud de la expresión
+.    Cualquier caracter salvo el salto de línea
+?    0-1 ocurrencias de la expresión
++    1-n ocurrencias de la expresión
+*    0-n ocurrencias de la expresión
+\    Para escribir un caracter especial como los anteriores y que sea tratado como un literal
+|    Para indicar una disyunción lógica (para elegir entre dos valores: a|b se tiene que cumplir al menos uno de los dos)
+```
+
+
+**Ejemplo de validación de teléfono**:
 
 ```javascript
-let codigoPostal = /^[0-9]{4,5}$/
+let telefono = /^[6789][0-9]{8}$/;
+
+telefono.test ('123456789');  // false
+telefono.test ( '95566622');  // false
+telefono.test ('95566622a');  // false
+telefono.test ('609123456');  // true
+
+```
+
+**Ejemplo de validación de código postal**:
+
+```javascript
+let codigoPostal = /^[0-9]{4,5}$/;
 
 codigoPostal.test ( '14500');  // true
 codigoPostal.test (  '9500');  // true
 codigoPostal.test ('114500');  // false
 codigoPostal.test (     '1');  // false
+
 ```
+
+**Ejemplo de validación de URLs**:
+
+```javascript
+let url = /^(http|ftp|https)\:\/\/[a-z0-9\_-]+(\.[a-z0-9\_-]+)*$/
+
+url.test ('https://google.es');             // true
+url.test ('ftp://ftp.rediris.es');          // true
+url.test ('file:///bin/bash');              // false
+url.test ('https://google.es/index.html');  // false
+
+```
+
+**Ejemplo de validación de e-mail**:
+
+```javascript
+let email = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
+
+email.test ('jamj2000@gmail.com');            // true
+email.test ('pepe_lopez@ventas.tienda.com');  // true
+email.test ('pepe#lopez@tienda.com');         // false
+email.test ('pepe_lopez@ventas/tienda.com');  // false
+
+```
+
+
+> REFERENCIAS:
+>  - https://es.wikipedia.org/wiki/Expresi%C3%B3n_regular
 
 
 ## Hacer copia de un objeto 
@@ -299,6 +363,8 @@ navigator.geolocation
 
 ```javascript
 // Igual al anterior, guardado en una función y comprobando previamente el soporte del navegador
+
+// Definición de función
 function getLocation() {
     if ("geolocation" in navigator)  // if (navigator.geolocation) 
       return navigator.geolocation
@@ -308,6 +374,9 @@ function getLocation() {
     else
       return "Geolocation is not supported by this browser.";
 }
+
+// Llamada a la función
+getLocation();
 ```
 
 
@@ -322,6 +391,7 @@ Métodos interesantes son:
 - appendChild
 - getElementById
 - getElementByClassName
+- querySelector
 - getAttribute
 - setAttribute
 - textContent
@@ -338,28 +408,30 @@ Métodos interesantes son:
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Documento</title>
+  <title>DOM</title>
 </head>
 <body>
- <ul id="lista">
- </ul>
-</body>
-</html>
-```
+  <ul    id="lista"> </ul>
+  <input id="boton" type="button" value="Pulsame">
 
-
-```javascript
+  <script>
 let list = document.getElementById('lista');
 
-for (let i = 1; i <= 5; i++) {
-  let item = document.createElement('li');
-  item.appendChild(document.createTextNode('Item ' + i));
+document.getElementById('boton').addEventListener ('click', function(){
+  for (let i = 1; i <= 5; i++) {
+    let item = document.createElement('li');
+    item.appendChild(document.createTextNode('Item ' + i));
 
-  item.onclick = function(ev) {
-    console.log('Item ' + i + ' ha sido pulsado.');
-  };
-  list.appendChild(item);
-}
+    item.onclick = function(ev) {
+      console.log('Item ' + i + ' ha sido pulsado.');
+    };
+    list.appendChild(item);
+  } 
+});
+
+  </script>
+</body>
+</html>
 ```
 
 
