--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -119,7 +119,7 @@ let codigoPostal = /^[0-9]{4,5}$/;
 
 codigoPostal.test ( '14500');  // true
 codigoPostal.test (  '9500');  // true
-codigoPostal.test ('114500');  // false
+codigoPostal.test ('A11450');  // false
 codigoPostal.test (     '1');  // false
 
 ```
@@ -146,6 +146,35 @@ email.test ('pepe_lopez@ventas.tienda.com');  // true
 email.test ('pepe#lopez@tienda.com');         // false
 email.test ('pepe_lopez@ventas/tienda.com');  // false
 
+```
+
+**Ejemplo dentro de página web**
+
+```html
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Validación de Código Postal</title>
+</head>
+<body>
+  <input id="cod" type="text" placeholder="Código Postal">
+  <input id="val" type="button" value="Validar">
+  <script>
+       function validarCP(){
+         return /^[0-9]{4,5}$/.test (document.getElementById('cod').value);          
+       }
+       
+       document.getElementById('val').addEventListener('click', function () {
+         if (validarCP()) alert('Código Postal CORRECTO')
+         else             alert('Código Postal NO VÁLIDO');
+       });
+  </script>
+</body>
+</html>
 ```
 
 
