--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -16,7 +16,7 @@ JavaScript fue inventado por Brendan Eich en 1995, y **se convirtió en un está
 |      | ECMAScript 4	  | ES4           | Nunca fue publicada.
 | 2009 | ECMAScript 5	  | ES5           | "strict mode". JSON support.
 | 2011 | ECMAScript 5.1 | ES5.1         | Cambios editoriales.
-| 2015 | ECMAScript 6   | ES6, ES2015   | Classes, modules.
+| 2015 |**ECMAScript 6**   | **ES6, ES2015**   | Modulos, Clases, Funciones flecha, Template strings, ... 
 | 2016 | ECMAScript 7   | ES7, ES2016   | Exponential operator (\*\*). Array.prototype.includes.
 | 2017 | ECMAScript 8   | ES8, ES2017   | String padding, Object.values, Object.entries, Async functions, ...
 
@@ -25,11 +25,7 @@ De especial importancia es **ES6 o ES2015**.
 
 
 
-
-
-
-
 # Referencias
 
-- [[en inglés] Características nuevas en ES2017 ](https://hackernoon.com/es8-was-released-and-here-are-its-main-new-features-ee9c394adf66)
+- [Características de ES6 respecto a ES5](https://carlosazaustre.com/ecmascript-6-el-nuevo-estandar-de-javascript/)
 - [[en inglés] Información en Wikipedia](https://en.wikipedia.org/wiki/ECMAScript)
