--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -215,6 +215,50 @@ for ( let j = 0; j < 2; j++ ) {
 console.log( j ); // ReferenceError: j is not defined
 ```
 
+# Declaración de Constantes
+
+Desde ES6 también podemos declarar constantes. Un constante es un dato que "*no puede ser modificado en tiempo de ejecución*".
+
+```javascript
+const  a = 10;
+
+a = 20;  // TypeError: Assignment to constant variable.
+```
+
+Sin embargo, en Javascript, **el término _constante_ puede llevar a engaño**. Para datos simples el comportamiento es el indicado anteriormente.
+
+Pero para datos complejos, como arrays y objetos, el significado es ligeramente distinto. Al igual que otros lenguajes, en Javascript cuando trabajamos con arrays y objetos, realmente estamos trabajando con referencias en memoria. **Para arrays y objetos lo que no puede modificarse es la referencia en memoria. Pero si es posible modificar elementos individuales dentro del array u objeto.** 
+
+A continuación se muestran algunos ejemplos.
+
+
+```javascript
+// Arrays
+const b = [ 1, 2, 3];
+let   c = [ 7, 8, 9 ];
+
+b = c;                                // TypeError: Assignment to constant variable.
+b = [ 4, 5, 6];                       // TypeError: Assignment to constant variable.
+
+// Sin embargo es posible modificar elementos individuales
+b[0] = 9;                             //  b = [ 9, 2, 3 ]
+
+
+// Objetos
+const pepe = { nombre: 'Jose', edad: 40 }
+let   eva  = { nombre: 'Eva', edad: 22}
+
+pepe = eva;                           // TypeError: Assignment to constant variable.
+pepe = { nombre: 'Pepe', edad: 30 };  // TypeError: Assignment to constant variable. 
+
+
+// Sin embargo es posible modificar elementos individuales
+pepe.nombre = 'Juan';                 // pepe = { nombre: 'Juan', edad: 40 }
+
+```
+
+
+
 # Referencias
 
 - [[en inglés] Objetos](https://www.w3schools.com/js/js_objects.asp)
